--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ button:hover {
 <button type="submit">Send Takedown Request</button>
 </form>
 
-<!-- Added Public Board Button -->
+<!-- Updated Public Board Button -->
 <br>
-<button onclick="window.location.href='board.html'">
+<button onclick="window.location.href='Board.html'">
 View Public Takedown Board
 </button>
 
@@ -194,4 +194,3 @@ displayReports();
 
 </body>
 </html>
-
