--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ button:hover {
   margin-top: 10px;
   border-radius: 8px;
 }
+
 .deleteBtn {
   background: #dc2626;
   margin-top: 5px;
@@ -103,8 +104,6 @@ const webhookURL = "https://discord.com/api/webhooks/1472468359181238385/SDFTcT-
 const roleID = "1472468416828014643";
 
 let reports = JSON.parse(localStorage.getItem("reports") || "[]");
-
-// Save current user name to match for deletion
 let currentUser = localStorage.getItem("currentUser") || "";
 
 const form = document.getElementById("takedownForm");
@@ -121,29 +120,26 @@ function displayReports() {
       <b>Reporter:</b> ${r.reporter}<br>
       <b>Game:</b> ${r.gameName}<br>
       <b>Link:</b> <a href="${r.gameLink}" target="_blank">${r.gameLink}</a><br>
-      <b>Original:</b> ${r.originalGame}
+      <b>Original:</b> ${r.originalGame}<br>
     `;
 
-    // Show delete button only if current user is the reporter
+    // Show delete button only for the person who submitted it
     if (r.reporter === currentUser) {
-      const btn = document.createElement("button");
-      btn.className = "deleteBtn";
-      btn.textContent = "Delete";
-      btn.onclick = () => deleteReport(index);
-      div.appendChild(btn);
+      const deleteBtn = document.createElement("button");
+      deleteBtn.textContent = "Delete";
+      deleteBtn.className = "deleteBtn";
+      deleteBtn.onclick = () => {
+        if (confirm("Are you sure you want to delete this report?")) {
+          reports.splice(index, 1);
+          localStorage.setItem("reports", JSON.stringify(reports));
+          displayReports();
+        }
+      };
+      div.appendChild(deleteBtn);
     }
 
     reportsDiv.appendChild(div);
   });
-}
-
-// Delete a report
-function deleteReport(index) {
-  if (confirm("Are you sure you want to delete this report?")) {
-    reports.splice(index, 1);
-    localStorage.setItem("reports", JSON.stringify(reports));
-    displayReports();
-  }
 }
 
 form.addEventListener("submit", async (e) => {
@@ -155,11 +151,10 @@ form.addEventListener("submit", async (e) => {
   const originalGame = document.getElementById("originalGame").value;
 
   const report = { reporter, gameName, gameLink, originalGame };
-
   reports.push(report);
   localStorage.setItem("reports", JSON.stringify(reports));
 
-  // Save current user locally for delete checks
+  // Save current user for delete access
   currentUser = reporter;
   localStorage.setItem("currentUser", currentUser);
 
