--- a/index.html
+++ b/index.html
@@ -2,154 +2,58 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Univexity Takedown System</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <style>
-  body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(120deg, #1e293b, #0f172a);
-    color: white;
-  }
+/* --- RESET & BASE --- */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body { font-family: 'Roboto', sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color: #f1f5f9; min-height: 100vh; overflow-x: hidden; }
+a { color: #3b82f6; text-decoration: none; }
+h1,h2,h3 { font-family: 'Montserrat', sans-serif; }
 
-  header {
-    text-align: center;
-    padding: 40px 20px 20px;
-    background: #0f172a;
-  }
+/* --- HEADER --- */
+header { text-align: center; padding: 60px 20px; position: relative; }
+header h1 { font-size: 3rem; color: #3b82f6; text-shadow: 0 0 10px #3b82f6; animation: glow 2s infinite alternate; }
+header p { margin-top: 10px; color: #94a3b8; font-size: 1.1rem; }
 
-  header h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
+/* Glow animation */
+@keyframes glow { 0% { text-shadow:0 0 5px #3b82f6; } 100% { text-shadow:0 0 25px #3b82f6; } }
 
-  header p {
-    color: #94a3b8;
-    font-size: 1rem;
-  }
+/* --- MAIN & FORM --- */
+main { display: flex; flex-direction: column; align-items: center; gap: 40px; padding: 30px 20px; }
+form { background: rgba(30,41,59,0.95); padding: 40px; border-radius: 20px; width: 100%; max-width: 650px; box-shadow: 0 15px 40px rgba(0,0,0,0.6); position: relative; transition: transform 0.3s; }
+form:hover { transform: translateY(-5px); }
+form label { display: block; margin-top: 15px; font-weight: 700; color: #38bdf8; }
+form input { width: 100%; padding: 15px; margin-top: 8px; border-radius: 12px; border: none; font-size: 1rem; background: #334155; color: #f1f5f9; transition: 0.3s; }
+form input:focus { outline: 2px solid #3b82f6; background: #1e293b; }
+form button { width: 100%; padding: 15px; margin-top: 20px; border-radius: 15px; border: none; background: #22c55e; font-weight: 700; font-size: 1.1rem; cursor: pointer; transition: all 0.3s; box-shadow: 0 0 10px #22c55e; }
+form button:hover { background: #16a34a; transform: scale(1.05); box-shadow: 0 0 20px #16a34a; }
 
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
+/* --- REPORTS --- */
+#reports { width: 100%; max-width: 750px; display: flex; flex-direction: column; gap: 20px; }
+.report { background: rgba(30,41,59,0.95); padding: 25px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.4); transition: transform 0.2s; cursor: pointer; position: relative; }
+.report:hover { transform: translateY(-5px); }
+.report b { color: #3b82f6; }
+.deleteBtn { background: #dc2626; color: #f1f5f9; border: none; border-radius: 12px; padding: 10px 14px; cursor: pointer; position: absolute; right: 20px; top: 20px; transition: transform 0.2s, background 0.2s; }
+.deleteBtn:hover { background: #b91c1c; transform: scale(1.05); }
+.copyBtn { background: #3b82f6; color: #f1f5f9; border: none; border-radius: 12px; padding: 8px 12px; margin-left: 10px; cursor: pointer; transition: transform 0.2s, background 0.2s; }
+.copyBtn:hover { transform: scale(1.05); background: #2563eb; }
 
-  form {
-    background: #1e293b;
-    padding: 30px;
-    border-radius: 15px;
-    width: 100%;
-    max-width: 550px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
-  }
+/* --- ACTION BUTTONS --- */
+.actionBtn { padding: 15px 25px; border-radius: 15px; font-weight: 700; cursor: pointer; border: none; font-size: 1.05rem; transition: transform 0.3s, box-shadow 0.3s; margin-top: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.4); }
+.publicBtn { background: #3b82f6; color: #f1f5f9; }
+.publicBtn:hover { background: #2563eb; transform: scale(1.05); }
+.discordBtn { background: #7289da; color: #f1f5f9; }
+.discordBtn:hover { background: #5b6eae; transform: scale(1.05); }
 
-  form label {
-    display: block;
-    margin-top: 15px;
-    font-weight: bold;
-  }
+/* --- FOOTER --- */
+footer { margin-top: 60px; max-width: 750px; text-align: center; color: #94a3b8; font-size: 0.9rem; padding: 20px; border-top: 2px solid #3b82f6; }
+footer h3 { margin-bottom: 10px; color: #38bdf8; }
 
-  form input, form button {
-    width: 100%;
-    padding: 12px;
-    margin-top: 8px;
-    border-radius: 8px;
-    border: none;
-    font-size: 1rem;
-  }
-
-  form input {
-    background: #334155;
-    color: white;
-  }
-
-  form button {
-    background: #22c55e;
-    color: white;
-    font-weight: bold;
-    margin-top: 20px;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-
-  form button:hover {
-    background: #16a34a;
-  }
-
-  #reports {
-    margin-top: 40px;
-    width: 100%;
-    max-width: 650px;
-  }
-
-  .report {
-    background: #1e293b;
-    padding: 20px;
-    border-radius: 12px;
-    margin-bottom: 15px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-  }
-
-  .report b {
-    color: #38bdf8;
-  }
-
-  .deleteBtn {
-    background: #dc2626;
-    margin-top: 10px;
-    cursor: pointer;
-    transition: background 0.2s;
-  }
-
-  .deleteBtn:hover {
-    background: #b91c1c;
-  }
-
-  .actionBtn {
-    margin-top: 20px;
-    padding: 12px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    width: 100%;
-    max-width: 300px;
-    font-size: 1rem;
-    transition: 0.3s;
-  }
-
-  .publicBtn {
-    background: #3b82f6;
-    color: white;
-  }
-
-  .publicBtn:hover {
-    background: #2563eb;
-  }
-
-  .discordBtn {
-    background: #7289da;
-    color: white;
-  }
-
-  .discordBtn:hover {
-    background: #5b6eae;
-  }
-
-  footer {
-    margin-top: 50px;
-    max-width: 700px;
-    text-align: center;
-    color: #94a3b8;
-    font-size: 0.9rem;
-  }
-
-  footer a {
-    color: #3b82f6;
-    text-decoration: none;
-  }
-
+/* --- SCROLL BUTTON --- */
+#scrollTopBtn { position: fixed; bottom: 30px; right: 30px; padding: 12px 16px; border-radius: 50%; border: none; background: #3b82f6; color: white; cursor: pointer; box-shadow: 0 0 15px #3b82f6; display: none; transition: transform 0.3s; }
+#scrollTopBtn:hover { transform: scale(1.1); }
 </style>
 </head>
 <body>
@@ -160,30 +64,27 @@
 </header>
 
 <main>
-
 <form id="takedownForm">
   <label>Your Name</label>
   <input type="text" id="reporterName" placeholder="Enter your name" required>
-
   <label>Game Name</label>
   <input type="text" id="gameName" placeholder="Name of the copied game" required>
-
   <label>Game Link</label>
   <input type="url" id="gameLink" placeholder="https://example.com" required>
-
   <label>Original Game</label>
   <input type="text" id="originalGame" placeholder="Original game name" required>
-
   <button type="submit">Send Takedown Request</button>
 </form>
 
-<!-- Action Buttons -->
 <button class="actionBtn publicBtn" onclick="window.location.href='Board.html'">View Public Takedown Board</button>
 <button class="actionBtn discordBtn" onclick="window.location.href='https://discord.gg/8wad3WGRgm'">Join Our Discord</button>
 
 <div id="reports">
   <h2>Submitted Requests</h2>
 </div>
+</main>
+
+<button id="scrollTopBtn" onclick="window.scrollTo({top:0,behavior:'smooth'})">⬆️</button>
 
 <footer>
   <h3>Terms of Service</h3>
@@ -191,109 +92,58 @@
 </footer>
 
 <script>
-const version = "1.0.0"; // Update this when site updates
-const webhookURL = "https://discord.com/api/webhooks/1472468359181238385/SDFTcT-Otl5qvGShijflFDuyG4zXJi71GD-jPO5i2HgQAhOjfNuaf0diDd4EfaqIUkSP";
-const versionWebhookURL = "https://discord.com/api/webhooks/1472473740418879520/7vemJf_xWRR1okc1u_aqG5ZHYLnERT2vs0EON4YPisXbGMGBiH9fCNgeUp41oDAb3n93";
-const roleID = "1472468416828014643";
-
-let reports = JSON.parse(localStorage.getItem("reports") || "[]");
+// --- VARIABLES ---
+const reports = JSON.parse(localStorage.getItem("reports") || "[]");
 let currentUser = "";
-
 const form = document.getElementById("takedownForm");
 const reportsDiv = document.getElementById("reports");
+const scrollBtn = document.getElementById("scrollTopBtn");
 
+// --- DISPLAY REPORTS ---
 function displayReports() {
   reportsDiv.innerHTML = "<h2>Submitted Requests</h2>";
-  reports.forEach((r, index) => {
+  reports.forEach((r,index)=>{
     const div = document.createElement("div");
-    div.className = "report";
-    div.innerHTML = `
-      <b>Reporter:</b> ${r.reporter}<br>
-      <b>Game:</b> ${r.gameName}<br>
-      <b>Link:</b> <a href="${r.gameLink}" target="_blank">${r.gameLink}</a><br>
-      <b>Original:</b> ${r.originalGame}<br>
-    `;
-    if(r.reporter === currentUser){
-      const deleteBtn = document.createElement("button");
-      deleteBtn.textContent = "Delete";
-      deleteBtn.className = "deleteBtn";
-      deleteBtn.onclick = () => {
-        if(confirm("Are you sure you want to delete this report?")){
-          reports.splice(index,1);
-          localStorage.setItem("reports", JSON.stringify(reports));
-          displayReports();
-        }
-      };
-      div.appendChild(deleteBtn);
+    div.className="report";
+    div.innerHTML=`<b>Reporter:</b> ${r.reporter}<br>
+                   <b>Game:</b> ${r.gameName}<br>
+                   <b>Link:</b> <a href="${r.gameLink}" target="_blank">${r.gameLink}</a>
+                   <button class="copyBtn" onclick="navigator.clipboard.writeText('${r.gameLink}')">Copy</button><br>
+                   <b>Original:</b> ${r.originalGame}<br>
+                   <b>Submitted:</b> ${r.timestamp || new Date().toLocaleString()}`;
+    if(r.reporter===currentUser){
+      const del = document.createElement("button");
+      del.textContent="Delete";
+      del.className="deleteBtn";
+      del.onclick=()=>{if(confirm("Delete this report?")){reports.splice(index,1);localStorage.setItem("reports",JSON.stringify(reports));displayReports();}};
+      div.appendChild(del);
     }
     reportsDiv.appendChild(div);
   });
 }
 
-// Version check
-(function checkVersion() {
-  const lastVersion = localStorage.getItem("siteVersion") || "";
-  if(version !== lastVersion){
-    fetch(versionWebhookURL,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({content:`Website updated! New version: ${version}`})
-    });
-    localStorage.setItem("siteVersion", version);
-  }
-})();
+// --- SCROLL BTN ---
+window.addEventListener('scroll',()=>{scrollBtn.style.display=window.scrollY>300?'block':'none';});
 
-form.addEventListener("submit", async (e) => {
+// --- FORM SUBMIT ---
+form.addEventListener("submit",(e)=>{
   e.preventDefault();
-
   const reporter = document.getElementById("reporterName").value.trim();
   const gameName = document.getElementById("gameName").value.trim();
   const gameLink = document.getElementById("gameLink").value.trim();
   const originalGame = document.getElementById("originalGame").value.trim();
-
-  if(!reporter || !gameName || !gameLink || !originalGame) return;
-
-  const report = { reporter, gameName, gameLink, originalGame };
+  if(!reporter||!gameName||!gameLink||!originalGame) return;
+  const report={reporter,gameName,gameLink,originalGame,timestamp:new Date().toLocaleString()};
   reports.push(report);
-  localStorage.setItem("reports", JSON.stringify(reports));
-
-  currentUser = reporter;
+  localStorage.setItem("reports",JSON.stringify(reports));
+  currentUser=reporter;
   displayReports();
-
-  // Send Discord webhook
-  const message = {
-    content:`<@&${roleID}>`,
-    embeds:[{
-      title:"New Takedown Request",
-      color:16711680,
-      fields:[
-        {name:"Reporter", value:reporter},
-        {name:"Game Name", value:gameName},
-        {name:"Game Link", value:gameLink},
-        {name:"Original Game", value:originalGame}
-      ],
-      footer:{text:"Univexity Takedown System"},
-      timestamp:new Date()
-    }]
-  };
-
-  try{
-    await fetch(webhookURL,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify(message)
-    });
-    alert("Takedown request sent successfully!");
-  }catch{
-    alert("Failed to send webhook.");
-  }
-
+  alert("Takedown request saved!");
   form.reset();
 });
 
+// --- INITIAL DISPLAY ---
 displayReports();
 </script>
-
-</main>
 </body>
 </html>
