--- a/index.html
+++ b/index.html
@@ -6,57 +6,69 @@
 <title>Univexity Takedown System</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <style>
-/* --- RESET & BASE --- */
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body { font-family: 'Roboto', sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color: #f1f5f9; min-height: 100vh; overflow-x: hidden; }
-a { color: #3b82f6; text-decoration: none; }
-h1,h2,h3 { font-family: 'Montserrat', sans-serif; }
+/* ===== RESET & BASE ===== */
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:'Roboto',sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color:#f1f5f9; min-height:100vh; overflow-x:hidden; transition: background 0.5s; }
+a { color:#3b82f6; text-decoration:none; }
+h1,h2,h3 { font-family:'Montserrat',sans-serif; }
+button { font-family:'Roboto',sans-serif; }
 
-/* --- HEADER --- */
-header { text-align: center; padding: 60px 20px; position: relative; }
-header h1 { font-size: 3rem; color: #3b82f6; text-shadow: 0 0 10px #3b82f6; animation: glow 2s infinite alternate; }
-header p { margin-top: 10px; color: #94a3b8; font-size: 1.1rem; }
+/* ===== LOADING SCREEN ===== */
+#loadingScreen { position:fixed; inset:0; background:#0f172a; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999; transition: opacity 0.5s; }
+#loadingScreen h1 { font-size:3rem; color:#3b82f6; margin-bottom:20px; animation: glow 2s infinite alternate; }
+#loadingScreen p { font-size:1.2rem; color:#94a3b8; text-align:center; max-width:400px; }
 
-/* Glow animation */
-@keyframes glow { 0% { text-shadow:0 0 5px #3b82f6; } 100% { text-shadow:0 0 25px #3b82f6; } }
+/* ===== HEADER ===== */
+header { text-align:center; padding:60px 20px; position:relative; }
+header h1 { font-size:3rem; color:#3b82f6; text-shadow:0 0 10px #3b82f6; animation: glow 2s infinite alternate; }
+header p { margin-top:10px; color:#94a3b8; font-size:1.1rem; }
 
-/* --- MAIN & FORM --- */
-main { display: flex; flex-direction: column; align-items: center; gap: 40px; padding: 30px 20px; }
-form { background: rgba(30,41,59,0.95); padding: 40px; border-radius: 20px; width: 100%; max-width: 650px; box-shadow: 0 15px 40px rgba(0,0,0,0.6); position: relative; transition: transform 0.3s; }
+/* ===== MAIN & FORM ===== */
+main { display:flex; flex-direction:column; align-items:center; gap:40px; padding:30px 20px; opacity:0; transition: opacity 1s ease-in-out; }
+form { background: rgba(30,41,59,0.95); padding:40px; border-radius:20px; width:100%; max-width:650px; box-shadow:0 15px 40px rgba(0,0,0,0.6); position:relative; transition: transform 0.3s; }
 form:hover { transform: translateY(-5px); }
-form label { display: block; margin-top: 15px; font-weight: 700; color: #38bdf8; }
-form input { width: 100%; padding: 15px; margin-top: 8px; border-radius: 12px; border: none; font-size: 1rem; background: #334155; color: #f1f5f9; transition: 0.3s; }
-form input:focus { outline: 2px solid #3b82f6; background: #1e293b; }
-form button { width: 100%; padding: 15px; margin-top: 20px; border-radius: 15px; border: none; background: #22c55e; font-weight: 700; font-size: 1.1rem; cursor: pointer; transition: all 0.3s; box-shadow: 0 0 10px #22c55e; }
-form button:hover { background: #16a34a; transform: scale(1.05); box-shadow: 0 0 20px #16a34a; }
+form label { display:block; margin-top:15px; font-weight:700; color:#38bdf8; }
+form input { width:100%; padding:15px; margin-top:8px; border-radius:12px; border:none; font-size:1rem; background:#334155; color:#f1f5f9; transition:0.3s; }
+form input:focus { outline:2px solid #3b82f6; background:#1e293b; }
+form button { width:100%; padding:15px; margin-top:20px; border-radius:15px; border:none; background:#22c55e; font-weight:700; font-size:1.1rem; cursor:pointer; transition: all 0.3s; box-shadow:0 0 10px #22c55e; }
+form button:hover { background:#16a34a; transform: scale(1.05); box-shadow:0 0 20px #16a34a; }
 
-/* --- REPORTS --- */
-#reports { width: 100%; max-width: 750px; display: flex; flex-direction: column; gap: 20px; }
-.report { background: rgba(30,41,59,0.95); padding: 25px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.4); transition: transform 0.2s; cursor: pointer; position: relative; }
+/* ===== REPORTS ===== */
+#reports { width:100%; max-width:750px; display:flex; flex-direction:column; gap:20px; }
+.report { background: rgba(30,41,59,0.95); padding:25px; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.4); transition: transform 0.2s; cursor:pointer; position:relative; }
 .report:hover { transform: translateY(-5px); }
 .report b { color: #3b82f6; }
-.deleteBtn { background: #dc2626; color: #f1f5f9; border: none; border-radius: 12px; padding: 10px 14px; cursor: pointer; position: absolute; right: 20px; top: 20px; transition: transform 0.2s, background 0.2s; }
-.deleteBtn:hover { background: #b91c1c; transform: scale(1.05); }
-.copyBtn { background: #3b82f6; color: #f1f5f9; border: none; border-radius: 12px; padding: 8px 12px; margin-left: 10px; cursor: pointer; transition: transform 0.2s, background 0.2s; }
-.copyBtn:hover { transform: scale(1.05); background: #2563eb; }
+.deleteBtn { background:#dc2626; color:#f1f5f9; border:none; border-radius:12px; padding:10px 14px; cursor:pointer; position:absolute; right:20px; top:20px; transition: transform 0.2s, background 0.2s; }
+.deleteBtn:hover { background:#b91c1c; transform: scale(1.05); }
+.copyBtn { background:#3b82f6; color:#f1f5f9; border:none; border-radius:12px; padding:8px 12px; margin-left:10px; cursor:pointer; transition: transform 0.2s, background 0.2s; }
+.copyBtn:hover { transform: scale(1.05); background:#2563eb; }
 
-/* --- ACTION BUTTONS --- */
-.actionBtn { padding: 15px 25px; border-radius: 15px; font-weight: 700; cursor: pointer; border: none; font-size: 1.05rem; transition: transform 0.3s, box-shadow 0.3s; margin-top: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.4); }
-.publicBtn { background: #3b82f6; color: #f1f5f9; }
-.publicBtn:hover { background: #2563eb; transform: scale(1.05); }
-.discordBtn { background: #7289da; color: #f1f5f9; }
-.discordBtn:hover { background: #5b6eae; transform: scale(1.05); }
+/* ===== ACTION BUTTONS ===== */
+.actionBtn { padding:15px 25px; border-radius:15px; font-weight:700; cursor:pointer; border:none; font-size:1.05rem; transition: transform 0.3s, box-shadow 0.3s; margin-top:10px; box-shadow:0 0 10px rgba(0,0,0,0.4); }
+.publicBtn { background:#3b82f6; color:#f1f5f9; }
+.publicBtn:hover { background:#2563eb; transform: scale(1.05); }
+.discordBtn { background:#7289da; color:#f1f5f9; }
+.discordBtn:hover { background:#5b6eae; transform: scale(1.05); }
 
-/* --- FOOTER --- */
-footer { margin-top: 60px; max-width: 750px; text-align: center; color: #94a3b8; font-size: 0.9rem; padding: 20px; border-top: 2px solid #3b82f6; }
-footer h3 { margin-bottom: 10px; color: #38bdf8; }
+/* ===== FOOTER ===== */
+footer { margin-top:60px; max-width:750px; text-align:center; color:#94a3b8; font-size:0.9rem; padding:20px; border-top:2px solid #3b82f6; }
+footer h3 { margin-bottom:10px; color:#38bdf8; }
 
-/* --- SCROLL BUTTON --- */
-#scrollTopBtn { position: fixed; bottom: 30px; right: 30px; padding: 12px 16px; border-radius: 50%; border: none; background: #3b82f6; color: white; cursor: pointer; box-shadow: 0 0 15px #3b82f6; display: none; transition: transform 0.3s; }
+/* ===== SCROLL BUTTON ===== */
+#scrollTopBtn { position:fixed; bottom:30px; right:30px; padding:12px 16px; border-radius:50%; border:none; background:#3b82f6; color:white; cursor:pointer; box-shadow:0 0 15px #3b82f6; display:none; transition: transform 0.3s; }
 #scrollTopBtn:hover { transform: scale(1.1); }
+
+/* ===== GLOW ===== */
+@keyframes glow { 0% { text-shadow:0 0 5px #3b82f6; } 100% { text-shadow:0 0 25px #3b82f6; } }
 </style>
 </head>
 <body>
+
+<!-- ===== LOADING SCREEN ===== -->
+<div id="loadingScreen">
+  <h1>Loading Univexity Takedown...</h1>
+  <p id="loadingTip">Tip: Never share your password with anyone!</p>
+</div>
 
 <header>
   <h1>Univexity Takedown System</h1>
@@ -70,7 +82,7 @@ footer h3 { margin-bottom: 10px; color: #38bdf8; }
   <label>Game Name</label>
   <input type="text" id="gameName" placeholder="Name of the copied game" required>
   <label>Game Link</label>
-  <input type="url" id="gameLink" placeholder="https://example.com" required>
+  <input type="url" id="gameLink" placeholder="https://meta.com/..." required>
   <label>Original Game</label>
   <input type="text" id="originalGame" placeholder="Original game name" required>
   <button type="submit">Send Takedown Request</button>
@@ -92,18 +104,46 @@ footer h3 { margin-bottom: 10px; color: #38bdf8; }
 </footer>
 
 <script>
-// --- VARIABLES ---
-const reports = JSON.parse(localStorage.getItem("reports") || "[]");
-let currentUser = "";
-const form = document.getElementById("takedownForm");
-const reportsDiv = document.getElementById("reports");
-const scrollBtn = document.getElementById("scrollTopBtn");
+// ===== LOADING SCREEN =====
+const tips = [
+  "Tip: Never share your password with anyone.",
+  "Tip: Always log out of public devices.",
+  "Tip: Enable two-factor authentication.",
+  "Tip: Check URLs carefully before clicking.",
+  "Tip: Don't click suspicious links in DMs.",
+  "Fun Fact: The first website ever made was in 1991!",
+  "Easter Egg: Press 'U' three times quickly!"
+];
+const loadingScreen = document.getElementById('loadingScreen');
+const loadingTip = document.getElementById('loadingTip');
 
-// --- DISPLAY REPORTS ---
-function displayReports() {
-  reportsDiv.innerHTML = "<h2>Submitted Requests</h2>";
+let tipIndex = 0;
+const tipInterval = setInterval(()=>{
+  tipIndex = (tipIndex + 1) % tips.length;
+  loadingTip.textContent = tips[tipIndex];
+}, 3000);
+
+// Hide loading after 3s
+setTimeout(()=>{
+  loadingScreen.style.opacity='0';
+  setTimeout(()=>loadingScreen.style.display='none',500);
+  document.querySelector('main').style.opacity='1';
+  clearInterval(tipInterval);
+},3000);
+
+// ===== VARIABLES =====
+const badWords=["idiot","stupid","fuck","nigger" "retard" "assfuck" "sex" "dick" "porn" "nigga" "bitch" "fart" ""shit" "slut" "moron"];
+let reports=JSON.parse(localStorage.getItem("reports")||"[]");
+let currentUser="";
+const form=document.getElementById("takedownForm");
+const reportsDiv=document.getElementById("reports");
+const scrollBtn=document.getElementById("scrollTopBtn");
+
+// ===== DISPLAY REPORTS =====
+function displayReports(){
+  reportsDiv.innerHTML="<h2>Submitted Requests</h2>";
   reports.forEach((r,index)=>{
-    const div = document.createElement("div");
+    const div=document.createElement("div");
     div.className="report";
     div.innerHTML=`<b>Reporter:</b> ${r.reporter}<br>
                    <b>Game:</b> ${r.gameName}<br>
@@ -112,7 +152,7 @@ function displayReports() {
                    <b>Original:</b> ${r.originalGame}<br>
                    <b>Submitted:</b> ${r.timestamp || new Date().toLocaleString()}`;
     if(r.reporter===currentUser){
-      const del = document.createElement("button");
+      const del=document.createElement("button");
       del.textContent="Delete";
       del.className="deleteBtn";
       del.onclick=()=>{if(confirm("Delete this report?")){reports.splice(index,1);localStorage.setItem("reports",JSON.stringify(reports));displayReports();}};
@@ -122,16 +162,28 @@ function displayReports() {
   });
 }
 
-// --- SCROLL BTN ---
+// ===== SCROLL BTN =====
 window.addEventListener('scroll',()=>{scrollBtn.style.display=window.scrollY>300?'block':'none';});
 
-// --- FORM SUBMIT ---
+// ===== VALIDATION =====
+function containsBadWord(name){
+  const lowered=name.toLowerCase();
+  return badWords.some(word=>lowered.includes(word));
+}
+function isMetaLink(url){
+  try{const parsed=new URL(url);return parsed.hostname.includes("meta.com");}
+  catch{return false;}
+}
+
+// ===== FORM SUBMIT =====
 form.addEventListener("submit",(e)=>{
   e.preventDefault();
-  const reporter = document.getElementById("reporterName").value.trim();
-  const gameName = document.getElementById("gameName").value.trim();
-  const gameLink = document.getElementById("gameLink").value.trim();
-  const originalGame = document.getElementById("originalGame").value.trim();
+  const reporter=document.getElementById("reporterName").value.trim();
+  const gameName=document.getElementById("gameName").value.trim();
+  const gameLink=document.getElementById("gameLink").value.trim();
+  const originalGame=document.getElementById("originalGame").value.trim();
+  if(containsBadWord(reporter)){alert("Your name contains inappropriate language."); return;}
+  if(!isMetaLink(gameLink)){alert("Only Meta links are allowed."); return;}
   if(!reporter||!gameName||!gameLink||!originalGame) return;
   const report={reporter,gameName,gameLink,originalGame,timestamp:new Date().toLocaleString()};
   reports.push(report);
@@ -142,8 +194,15 @@ form.addEventListener("submit",(e)=>{
   form.reset();
 });
 
-// --- INITIAL DISPLAY ---
+// ===== INITIAL DISPLAY =====
 displayReports();
+
+// ===== EASTER EGG =====
+let easterCount=0;
+document.addEventListener('keydown',(e)=>{
+  if(e.key.toLowerCase()==='u'){ easterCount++; if(easterCount===3){ alert("🎉 Secret Univexity Easter Egg Activated!"); easterCount=0; } }
+});
 </script>
+
 </body>
 </html>
