--- a/index.html
+++ b/index.html
@@ -1,166 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Univexity Takedown System</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
-<style>
-/* ===== BASE ===== */
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:'Roboto',sans-serif; background: linear-gradient(135deg,#0f172a,#1e293b); color:#f1f5f9; min-height:100vh; transition: background 0.5s; }
-
-/* ===== NAVBAR ===== */
-nav { display:flex; justify-content:center; gap:25px; background: rgba(30,41,59,0.95); padding:15px 0; box-shadow:0 5px 15px rgba(0,0,0,0.5); position:sticky; top:0; z-index:1000; }
-nav a { color:#3b82f6; font-weight:700; text-decoration:none; font-size:1rem; transition:0.3s; }
-nav a:hover { color:#38bdf8; transform: scale(1.05); }
-
-/* ===== HEADER ===== */
-header { text-align:center; padding:50px 20px 20px; }
-header h1 { font-family:'Montserrat',sans-serif; font-size:3rem; color:#3b82f6; text-shadow:0 0 10px #3b82f6; }
-header p { margin-top:10px; font-size:1.2rem; color:#94a3b8; }
-
-/* ===== FORM ===== */
-main { display:flex; flex-direction:column; align-items:center; padding:20px; gap:30px; }
-form { background: rgba(30,41,59,0.95); padding:40px; border-radius:20px; width:100%; max-width:650px; box-shadow:0 15px 40px rgba(0,0,0,0.5); transition: transform 0.3s; }
-form:hover { transform: translateY(-5px); }
-form label { display:block; margin-top:15px; font-weight:700; color:#38bdf8; }
-form input { width:100%; padding:15px; margin-top:8px; border-radius:12px; border:none; font-size:1rem; background:#334155; color:#f1f5f9; transition:0.3s; }
-form input:focus { outline:2px solid #3b82f6; background:#1e293b; }
-form button { width:100%; padding:15px; margin-top:20px; border-radius:15px; border:none; background:#22c55e; font-weight:700; font-size:1.1rem; cursor:pointer; transition: all 0.3s; box-shadow:0 0 10px #22c55e; }
-form button:hover { background:#16a34a; transform: scale(1.05); box-shadow:0 0 20px #16a34a; }
-
-/* ===== ACTION BUTTONS ===== */
-.actionBtn { padding:15px 25px; border-radius:15px; font-weight:700; cursor:pointer; border:none; font-size:1.05rem; transition: transform 0.3s, box-shadow 0.3s; margin-top:10px; box-shadow:0 0 10px rgba(0,0,0,0.4); }
-.publicBtn { background:#3b82f6; color:#f1f5f9; }
-.publicBtn:hover { background:#2563eb; transform: scale(1.05); }
-.discordBtn { background:#7289da; color:#f1f5f9; }
-.discordBtn:hover { background:#5b6eae; transform: scale(1.05); }
-
-/* ===== REPORTS ===== */
-#reports { display:flex; flex-direction:column; gap:25px; max-width:900px; margin:0 auto; }
-.report { background: rgba(30,41,59,0.95); padding:25px; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.4); transition: transform 0.2s; position:relative; }
-.report:hover { transform: translateY(-5px); }
-.report b { color:#3b82f6; }
-.copyBtn { position:absolute; top:20px; right:20px; padding:8px 12px; background:#3b82f6; border:none; border-radius:12px; color:white; cursor:pointer; font-weight:700; transition: transform 0.2s, background 0.2s; }
-.copyBtn:hover { transform: scale(1.05); background:#2563eb; }
-
-/* ===== SCROLL BUTTON ===== */
-#scrollTopBtn { position:fixed; bottom:30px; right:30px; padding:12px 16px; border-radius:50%; border:none; background:#3b82f6; color:white; cursor:pointer; box-shadow:0 0 15px #3b82f6; display:none; transition: transform 0.3s; }
-#scrollTopBtn:hover { transform: scale(1.1); }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Closure Notice</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+            background: #121212;
+            color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            backdrop-filter: blur(10px);
+        }
+        h1 {
+            color: #ff5555;
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+            line-height: 1.6;
+        }
+        a {
+            color: #00ffff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-
-<!-- NAVBAR -->
-<nav>
-  <a href="https://univexity.github.io/" target="_blank">Public Board</a>
-  <a href="https://univexity.github.io/About%20us.html" target="_blank">About Us</a>
-  <a href="https://discord.gg/8wad3WGRgm" target="_blank">Discord</a>
-</nav>
-
-<header>
-  <h1>Univexity Takedown System</h1>
-  <p>Submit game copy reports and protect creators.</p>
-</header>
-
-<main id="mainContent">
-
-<!-- REPORT FORM -->
-<form id="takedownForm">
-  <label>Your Name</label>
-  <input type="text" id="reporterName" placeholder="Enter your name" required>
-
-  <label>Game Name</label>
-  <input type="text" id="gameName" placeholder="Name of the copied game" required>
-
-  <label>Game Link</label>
-  <input type="url" id="gameLink" placeholder="Meta link only (https://meta.com/...)" required>
-
-  <label>Original Game</label>
-  <input type="text" id="originalGame" placeholder="Original game name" required>
-
-  <button type="submit">Send Takedown Request</button>
-</form>
-
-<!-- ACTION BUTTONS -->
-<button class="actionBtn publicBtn" onclick="window.open('https://univexity.github.io/','_blank')">View Public Takedown Board</button>
-<button class="actionBtn discordBtn" onclick="window.open('https://discord.gg/8wad3WGRgm','_blank')">Join Our Discord</button>
-
-<!-- PUBLIC REPORTS -->
-<section id="reportsSection">
-  <h2>Public Takedown Requests</h2>
-  <div id="reports"></div>
-</section>
-
-<button id="scrollTopBtn" onclick="window.scrollTo({top:0,behavior:'smooth'})">⬆️</button>
-
-<script>
-// ===== VARIABLES =====
-let reports = JSON.parse(localStorage.getItem("reports") || "[]");
-let currentUser = "";
-const form = document.getElementById("takedownForm");
-const reportsDiv = document.getElementById("reports");
-const scrollBtn = document.getElementById("scrollTopBtn");
-
-// ===== DISPLAY REPORTS =====
-function displayReports() {
-  reportsDiv.innerHTML = "";
-  if(reports.length===0) {
-    reportsDiv.innerHTML = "<p style='text-align:center;'>No takedown requests yet.</p>";
-    return;
-  }
-  reports.forEach(report=>{
-    const div=document.createElement("div");
-    div.className="report";
-    div.innerHTML=`
-      <b>Reporter:</b> ${report.reporter}<br>
-      <b>Game Name:</b> ${report.gameName}<br>
-      <b>Game Link:</b> <a href="${report.gameLink}" target="_blank">${report.gameLink}</a><br>
-      <b>Original Game:</b> ${report.originalGame}<br>
-      <b>Submitted:</b> ${report.timestamp || new Date().toLocaleString()}
-    `;
-    const copyBtn=document.createElement("button");
-    copyBtn.textContent="Copy Link";
-    copyBtn.className="copyBtn";
-    copyBtn.onclick=()=>{navigator.clipboard.writeText(report.gameLink); alert("Link copied!");};
-    div.appendChild(copyBtn);
-    reportsDiv.appendChild(div);
-  });
-}
-
-// ===== FORM SUBMIT =====
-form.addEventListener("submit",(e)=>{
-  e.preventDefault();
-  const reporter=document.getElementById("reporterName").value.trim();
-  const gameName=document.getElementById("gameName").value.trim();
-  const gameLink=document.getElementById("gameLink").value.trim();
-  const originalGame=document.getElementById("originalGame").value.trim();
-
-  if(!gameLink.includes("meta.com")) { alert("Only Meta links allowed!"); return; }
-  if(!reporter||!gameName||!gameLink||!originalGame) return;
-
-  const report={reporter,gameName,gameLink,originalGame,timestamp:new Date().toLocaleString()};
-  reports.push(report);
-  localStorage.setItem("reports",JSON.stringify(reports));
-  currentUser=reporter;
-  displayReports();
-  alert("Takedown request submitted!");
-  form.reset();
-});
-
-// ===== SCROLL BUTTON =====
-window.addEventListener('scroll',()=>{scrollBtn.style.display=window.scrollY>300?'block':'none';});
-
-// ===== INITIAL DISPLAY =====
-displayReports();
-
-// ===== EASTER EGG (Shift + U) =====
-let secretCount=0;
-document.addEventListener('keydown',e=>{
-  if(e.key==='U' && e.shiftKey){ secretCount++; if(secretCount===5){ alert("🎉 Secret Univexity Easter Egg Activated!"); secretCount=0; } }
-});
-</script>
-
+    <div class="container">
+        <h1>Important Update from Xyra Studios</h1>
+        <p>Dear visitors,</p>
+        <p>We want to inform you that we have officially closed our GitHub page.</p>
+        <p>GitHub has been a platform where we shared projects, updates, and tools with our community. However, we have decided to move to a new, dedicated website to provide a better experience.</p>
+        <p>All projects, updates, and reports will now be handled exclusively through our new website.</p>
+        <p>This move allows us to offer a modern interface, interactive dashboards, and a faster, more secure way for users to interact with our services.</p>
+        <p>The new platform also provides features that were not possible on GitHub, including a dedicated admin panel and public dashboards for easier access.</p>
+        <p>For anyone who has followed us here, please note that all future updates and submissions will happen on the new site. GitHub will no longer be used for contributions or reports.</p>
+        <p>We understand that change can be unexpected, but this transition is designed to improve the experience for our users and community.</p>
+        <p>To access our new website and explore all updates, please visit: <a href="https://univexity-report-hub.base44.app/Home" target="_blank">https://univexity-report-hub.base44.app/Home</a></p>
+        <p>We appreciate your understanding and support. We are excited to continue building and improving our platform with you.</p>
+        <p>Thank you for being part of our journey, and we hope to see you on our new website soon!</p>
+        <p>Best regards,<br>Xyra Studios</p>
+    </div>
 </body>
 </html>
